# PCMesh3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: teeth.xyz
include/: base2.h  context.h  debugger.h  geometry.h  morton.h  octree.h
